# MLDL

./: .gitignore  README.md  pyproject.toml
01-ml-sklearn/regression/: linear_regression.ipynb  regression_fundamentals.ipynb
01-ml-sklearn/time_series/: time_series_fundamentals.ipynb
03-dl-pytorch/01-classification/: 2PyTorch Classification Exercises.ipynb
03-dl-pytorch/02-computer-vision/: 3PyTorch CV Exercises.ipynb
03-dl-pytorch/03-custom-datasets/: 4PyTorch Custom Datasets Exercises.ipynb
03-dl-pytorch/04-modular/: 5PyTorch Modular Exercise.ipynb
03-dl-pytorch/04-modular/python_scripts/: data_setup.py  get_data.py
03-dl-pytorch/05-transfer-learning/: 06_transfer_learning.ipynb
04-projects/: README.md
notebooks/: calyx_interview.ipynb  transformer_attention_is_all_you_need.ipynb
utils/: __init__.py
